# EFC

./: .gitignore  AGENTS.md  CITATION.cff  README.md  codemeta.json  ecosystem.jsonld  llms.txt
api/: README.md  README_API.md  concept-index.json  index.json  metadata.json  semantic_api.py
docs/papers/efc/Regime_Dependent_Growth_Enhancement___A_Transition_Metric_Interpretation_of_the_Fugaku_DESI_Matter_Density_Offset/efc-toolkit/: CITATION.cff  LICENSE  README.md  codemeta.json  index.yaml  meta.json  package.json  pyproject.toml  schema.jsonld
docs/papers/efc/Regime_Dependent_Growth_Enhancement___A_Transition_Metric_Interpretation_of_the_Fugaku_DESI_Matter_Density_Offset/efc-toolkit/efc/: __init__.py  constants.py  regimes.py  transition.py  validators.py
docs/papers/efc/Regime_Dependent_Growth_Enhancement___A_Transition_Metric_Interpretation_of_the_Fugaku_DESI_Matter_Density_Offset/efc-toolkit/examples/: ai_usage.py
docs/papers/efc/Regime_Dependent_Growth_Enhancement___A_Transition_Metric_Interpretation_of_the_Fugaku_DESI_Matter_Density_Offset/efc-toolkit/tests/: __init__.py  test_efc.py
figshare/: README.md  README_STATUS.md  figshare-index.json  figshare-links.json  sync_log.json
jsonld/: ai-workflow-framework-energy-flow-cosmology.jsonld  auth-layer-origin-provenance-and-structural-signature-of-energy-flow-cosmology.jsonld  efc-a-deep-dive-into-the-halo-concept.jsonld  efc-adaptive-learning-system-complete-integration.jsonld  efc-ai-augmented-scientific-workflow-framework.jsonld  efc-applications-and-implications.jsonld  efc-can-energy-flow-be-observed-in-galactic-clusters.jsonld  efc-can-entropy-drive-cosmic-evolution.jsonld  efc-cmb-thermodynamic-gradient.jsonld  efc-dynamic-balance-entropy-order-and-chaos.jsonld  efc-energy-flow-as-the-fundamental-dynamic-of-the-universe.jsonld  efc-field-equations-for-entropy-driven-spacetime.jsonld  efc-flow-entropy-and-spacetime-distortion-in-cosmological-clusters.jsonld  efc-formal-spec.jsonld  efc-formal-specification.jsonld  efc-grid-higgs-framework.jsonld  efc-grid-higgs-paradigm-shift.jsonld  efc-grid-model-entropic-dynamics.jsonld  efc-grid-model-for-entropic-dynamics.jsonld  efc-how-does-balance-shape-universal-structures.jsonld  efc-how-energy-flow-sustain-spacetime.jsonld  efc-how-energy-flow-sustains-spacetime.jsonld  efc-index.jsonld  (+36 more)
(+369 files in other folders)
